# lab2istp

./: .env  Cargo.toml  Rocket.toml
migrations/2022-01-14-113442_library/: down.sql  up.sql
migrations/2022-02-12-162337_library/: down.sql  up.sql
migrations/2022-02-20-162920_add_country/: up.sql
migrations/2022-02-20-165539_add_fk/: up.sql
migrations/2022-02-20-165903_change_country_id_to_varchar/: up.sql
migrations/2022-05-22-114654_changestoTable/: up.sql
migrations/2022-05-22-121152_fill_country/: up.sql
public/: add.css  download.xlsx  index.html  lab2.js  persist.xlsx  signin.css  testing.xlsx
src/: auth.rs  car.rs  car_model.rs  customer.rs  main.rs  manufacturer.rs  models.rs  rental_cases.rs  schema.rs  sold_tableware.rs  staff.rs  tableware.rs
templates/: add.html.hbs  index.html.hbs  login.html.hbs  nav.html.hbs  show.html.hbs  update.html.hbs
templates/car/: add.html.hbs  list.html.hbs  show.html.hbs  update.html.hbs
templates/car_model/: add.html.hbs  list.html.hbs  show.html.hbs  update.html.hbs
templates/customer/: add.html.hbs  list.html.hbs  rental_cases.html.hbs  show.html.hbs  update.html.hbs
templates/manufacturer/: add.html.hbs  list.html.hbs  show.html.hbs  update.html.hbs
templates/rental_cases/: add.html.hbs  list.html.hbs  show.html.hbs  update.html.hbs
