[package]
name = "rest_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
diesel = { version = "1.4.4", features = ["postgres", "numeric"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
bigdecimal = {version = "0.1.2", features = ["serde"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
